[package]
name = "chml_api"
version = "0.1.1"
edition = "2024"
description = "Rust SDK for chml"
authors = ["fb0sh <fb0sh@outlook.com>"]
license = "MIT"
repository = "https://github.com/fb0sh/chml_api"
readme = "README.md"
keywords = ["chml", "api"]
categories = ["api-bindings"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13.1", features = ["json", "query"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
